# daily-checkin

./: .env.example  .gitignore  Cargo.toml  README.org  TESTING.org  USAGE.org  daily-checkin-bot.service  flake.nix  install.sh
nix/: daily-checkin-module.nix
src/: bot.rs  data.rs  handler.rs  main.rs  scheduler.rs  streaks.rs
src/commands/: admin.rs  mod.rs  ping.rs  user.rs
src/utils/: command_helpers.rs  mod.rs  responses.rs
